@@ -12,6 +12,7 @@ Previews :
 Scenery :
   * Added clouds hardness to light.
   * Added sun halo control.
+  * New cloud model with 2 noises : one for the global shape and one for edges.
 
 Rendering :
   * New texture model (perpendicular displacement and thickness).
